--- a/style.css
+++ b/style.css
@@ -38,16 +38,27 @@ body{
 background-image: url(img/winter-snow.jpg);
 }
 table {
+    margin: 50px;
     border: 5px solid black;
-border-collapse: collapse;
+    border-collapse: collapse;
+
 }
 
 th{
 border: solid red;
 font-size: larger;
+
 }
 .dgr{
 background-color: bisque;
-
 }
 
+
+
+.fy {
+border: 5px solid black;
+margin-top: 150px;
+width: 650px;
+height: 400px;
+
+}
